--- a/vue2x/wx/h5/wxpostlogin.html
+++ b/vue2x/wx/h5/wxpostlogin.html
@@ -17,40 +17,83 @@
         overflow: hidden;
         margin:  0 auto;
       }
-
+      .g-tac {
+        text-align: center;
+      }
       .login {
         width: 100%;
         height: 100%;
         position: relative;
       }
-      /* .content {
-        width: 100%;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        -webkit-transform: translate(-50%, -50%);
-
-      }
-      .text {
-        text-align: center;
-        font-size: 14px;
-        width: 100%;
-        padding: 6px;
+      .img-top {
         display: block;
-      }*/
-      img {
         width: 100%;
         height: auto;
-        display: block; 
-        margin: 0 auto;
-      } 
+      }
+      .link-text {
+        margin-top: 0.6rem;
+        color: #4a4a4a;
+        font-size: 0.28rem;
+      }
+      .wx-desc {
+        margin-top: 0.8rem;
+        font-size: 0.34rem;
+        color: #4a4a4a;
+      }
+      .wx-name {
+        color: #f4001e;
+        margin-top: 0;
+      }
+      .wx-link {
+        display: block;
+        margin: 0.59rem auto 0;
+        width: 5.22rem;
+        height: 0.88rem;
+        line-height: 0.88rem;
+        border-radius: 0.14rem;
+        background-color: #42bd40;
+        font-size: 0.34rem;
+        color: #fff;
+        text-decoration: none;
+      }
     </style>
   </head>
   <body>
-    <div class="login">
-      <img src="http://img.yunxingzh.com/4470bf79-f91f-4970-8e04-035bbdd5c399.png">
-    </div>
+    <img class="img-top" src="http://img.yunxingzh.com/1c740457-a159-4c54-b6cd-1caad727447b.png">
+    <p class="link-text g-tac">连接成功，本次时长：10分钟</p>
+    <p class="wx-desc g-tac">关注公众号享受</p>
+    <p class="wx-desc wx-name g-tac">VIP不限时上网服务</p>
+    <a class="wx-link g-tac" href="https://mp.weixin.qq.com/mp/profile_ext?action=home&__biz=MzIzOTc0OTcyMw==&scene=124#wechat_redirect" target="_blank">现在就去</a>
+    <script type="text/javascript">
+      adapt();
+      function adapt() {
+        if (document && window) {
+          // init font
+        var docEl = document.documentElement;
+        var isIOS = navigator.userAgent.match(/iphone|ipod|ipad/gi);
+        var dpr = isIOS? Math.min(window.devicePixelRatio, 3) : 1;
+          dpr = window.top === window.self? dpr : 1; //被iframe引用时，禁止缩放
+        var scale = 1 / dpr;
+        var resizeEvt = 'orientationchange' in window ? 'orientationchange' : 'resize';
+
+        docEl.dataset.dpr = dpr;
+        var metaEl = document.createElement('meta');
+        metaEl.name = 'viewport';
+        metaEl.content = 'initial-scale=1,maximum-scale=1, minimum-scale=1';
+        docEl.firstElementChild.appendChild(metaEl);
+        var recalc = function () {
+          var width = docEl.clientWidth;
+          if (width / dpr > 750) {
+            width = 750 * dpr;
+          }
+          docEl.style.fontSize = 100 * (width / 750) + 'px';
+        };
+        recalc();
+        if (!document.addEventListener) return;
+        window.addEventListener(resizeEvt, recalc, false);
+        }
+      }
+    </script>
     </script>
   </body>
 </html>
