--- a/vue2x/wx/h5/look.html
+++ b/vue2x/wx/h5/look.html
@@ -132,14 +132,16 @@
         <p class="g-tac top-title">历史展示：<span class="colorff">{{total}}</span></p>
         <p class="g-tac top-subtitle">点击情况：</p>
       </div>
-      <table class="look-list">
-        {{each infos as value i}}
-          <tr class="list-info">
-            <td class="list-info-title g-ellipsis">{{value.title}}</td>
-            <td class="list-info-total"><i class="colorff">{{value.total}}</i>次</td>
-            <td class="list-info-lu">点击率:{{(value.total/total*100).toFixed(2)}}%</td>
-          </tr>
-        {{/each}}
+      <table class="look-list" id="tableid">
+        <tbody id="tbodyDate">
+          {{each infos as value i}}
+            <tr class="list-info">
+              <td class="list-info-title g-ellipsis">{{value.title}}</td>
+              <td class="list-info-total"><i class="colorff">{{value.total}}</i>次</td>
+              <td class="list-info-lu">点击率:{{(value.total/total*100).toFixed(2)}}%</td>
+            </tr>
+          {{/each}}
+        </tbody>
       </table>
       <div class="down-table">
         <a class="down-btn">下载统计表格</a>
@@ -148,6 +150,7 @@
   <script type="text/javascript" src="js/jquery.min.js"></script>
   <script type="text/javascript" src='js/template.js'></script>
   <script type="text/javascript" src="js/cgi.js"></script>
+  <!--script type="text/javascript" src="js/export-excel.js"></script-->
   <script type="text/javascript">
     adapt();
     var type = ~~CGI.query().type;
@@ -155,21 +158,38 @@
       if (resp.errno === 0) {
         var data = resp.data;
         $('.look').append(template('tplLook',data));
-        $('.down-btn').click(downTable());
+        $('.down-btn').click(function() {
+          $(this).ExportExcel('tbodyDate');
+        });
       } else {
         console.log(resp.desc);
       }
     })
-    function downTable() {
-      // 使用outerHTML属性获取整个table元素的HTML代码（包括<table>标签），然后包装成一个完整的HTML文档，设置charset为urf-8以防止中文乱码
-      var html = "<html><head><meta charset='utf-8' /></head><body>" + document.getElementsByTagName("table")[0].outerHTML + "</body></html>";
-      // 实例化一个Blob对象，其构造函数的第一个参数是包含文件内容的数组，第二个参数是包含文件类型属性的对象
-      var blob = new Blob([html], { type: "application/vnd.ms-excel" });
-      var a = document.getElementsByTagName("a")[0];
-      // 利用URL.createObjectURL()方法为a元素生成blob URL
-      a.href = URL.createObjectURL(blob);
-      // 设置文件名，目前只有Chrome和FireFox支持此属性
-      a.download = "广告投放数据查询表.xls";
+    $.fn.ExportExcel = function(tab_id, options){
+      var options = $.extend(options);
+      return this.each(function () {
+        var currentObject = $(this); //获取当前对象 
+        currentObject.onmouseover = function () {
+           $(this).css('cursor', 'hand');
+        };
+         var tab_text = '<html xmlns:x="urn:schemas-microsoft-com:office:excel">';
+         tab_text = tab_text + '<head><xml><x:ExcelWorkbook><x:ExcelWorksheets><x:ExcelWorksheet>';
+
+         tab_text = tab_text + '<x:Name>Test Sheet</x:Name>';
+
+         tab_text = tab_text + '<x:WorksheetOptions><x:Panes></x:Panes></x:WorksheetOptions></x:ExcelWorksheet>';
+         tab_text = tab_text + '</x:ExcelWorksheets></x:ExcelWorkbook></xml></head><body>';
+
+         tab_text = tab_text + "<table border='1px'>";
+         //tab_text = tab_text + $('#' + thread_id).html();
+         tab_text = tab_text + $('#' + tab_id).html();
+         tab_text = tab_text + '</table></body></html>';
+
+         var data_type = 'data:application/vnd.ms-excel';
+
+         $(this).attr('href', data_type + ', ' + encodeURIComponent(tab_text));
+         $(this).attr('download', '广告投放数据查询表' + '.xls');
+      })
     }
     function adapt() {
       if (document && window) {
